fix img align

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ h1{
 img{
   height: 100px;
   border-radius: 100%;
-  display: inline;
+  display: block;
+  /*position: relative;*/
   float: right;
 }
 @media (max-width: 900px) {
